--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Frigate Add-ons
-url: "https://github.com/blakeblackshear/frigate-hass-addons"
-maintainer: blakeblackshear
+name: Frigate Add-ons Custom
+url: "https://github.com/BJD1997/frigate-hass-addons"
+maintainer: BJD1997
